--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Machine learning</title>
 </head>
 <body>
-<h1>Machine learning React app/h1>
+<h1>Machine learning React app</h1>
 <div id="app"></div>
 <script src="/bundle.js"></script>
 </body>
