--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Machine learning</title>
-</head>
-<body>
-<h1>Machine learning React app</h1>
-<div id="app"></div>
-<script src="/bundle.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Machine learning</title>
+	</head>
+	<body>
+		<div id="app"></div>
+		<script src="/bundle.js"></script>
+	</body>
 </html>
